--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.3.19",
     "gray-matter": "^4.0.3",
+    "hls.js": "^1.6.15",
     "lucide-react": "^0.344.0",
     "next": "14.2.5",
     "openai": "^4.28.0",
