--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,31 +13,33 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "@supabase/supabase-js": "^2.39.3",
+    "@supabase/supabase-js": "^2.45.4",
+    "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.3.19",
+    "clsx": "^2.1.1",
+    "form-data-encoder": "^2.1.4",
+    "framer-motion": "^11.5.4",
     "gray-matter": "^4.0.3",
     "hls.js": "^1.6.15",
-    "lucide-react": "^0.344.0",
-    "next": "14.2.5",
-    "openai": "^4.28.0",
+    "lucide-react": "^0.468.0",
+    "next": "^14.2.30",
+    "openai": "^4.70.3",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
-    "resend": "^3.2.0",
-    "tailwind-merge": "^2.2.1"
+    "resend": "^4.0.1",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "@types/node": "^22.10.2",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.30",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2"
   }
 }
